--- a/.pipelines/1p-e2e.yml
+++ b/.pipelines/1p-e2e.yml
@@ -5,7 +5,7 @@ variables:
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
         sourceBranchName: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
-        sourceBranchName: variables['System.PullRequest.SourceBranch']
+        sourceBranchName: ${{ variables['System.PullRequest.SourceBranch'] }}
 
 resources:
     repositories:
