--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -18,7 +18,7 @@
     "@angular/compiler": "^18.0.0-rc.1",
     "@angular/core": "^18.0.0-rc.1",
     "@angular/forms": "^18.0.0-rc.1",
-    "@angular/material": "^18.0.0-next.6",
+    "@angular/material": "^18.0.0-rc.1",
     "@angular/platform-browser": "^18.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^18.0.0-rc.1",
     "@angular/router": "^18.0.0-rc.1",
