--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^18.0.0-rc.1",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
+    "e2e-test-utils": "^0.0.1",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
