--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -85,3 +85,4 @@ extends:
                             - "angular16-sample-app"
                             - "angular-b2c-sample-app"
                             - "angular-standalone-sample"
+                            - "angular17-standalone-sample"
