--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -73,6 +73,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
+    "@microsoft/api-extractor": "^7.43.4",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/debug": "^4.1.5",
     "@types/jest": "^29.5.0",
