--- a/lib/msal-angular/.editorconfig
+++ b/lib/msal-angular/.editorconfig
@@ -13,4 +13,7 @@ quote_type = double
 
 [*.md]
 max_line_length = off
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
+quote_type = single
+indent_style = space
+indent_size = 2
