--- a/samples/msal-angular-v3-samples/angular16-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "jest"
+    "test:e2e": "jest"
   },
   "private": true,
   "dependencies": {
