--- a/samples/msal-node-samples/auth-code-cli-app/package.json
+++ b/samples/msal-node-samples/auth-code-cli-app/package.json
@@ -8,7 +8,7 @@
         "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
         "start": "node .",
         "start:build": "npm run build:package && npm start",
-        "test": "jest"
+        "test:e2e": "jest"
     },
     "author": "Microsoft",
     "license": "MIT",
