--- a/samples/msal-node-samples/on-behalf-of/package.json
+++ b/samples/msal-node-samples/on-behalf-of/package.json
@@ -5,7 +5,7 @@
   "main": "test/obo-aad.spec.ts",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test:e2e": "jest",
     "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node",
     "start:build": "npm run build:package && npm start"
   },
