Standardize react e2e test script

--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -27,8 +27,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject",
-        "test": "jest",
-        "test:ci": "npm run test -- --watchAll=false --detectOpenHandles --forceExit --reporters=default --reporters=jest-junit",
+        "test:e2e": "jest",
         "build:package": "cd ../../../ && npm run build:all --workspace=lib/msal-react"
     },
     "browserslist": {
