--- a/samples/msal-react-samples/gatsby-sample/package.json
+++ b/samples/msal-react-samples/gatsby-sample/package.json
@@ -9,7 +9,7 @@
     "develop": "gatsby develop -p 3000",
     "start": "gatsby serve -p 3000",
     "serve": "gatsby serve",
-    "test": "jest",
+    "test:e2e": "jest",
     "clean": "gatsby clean"
   },
   "dependencies": {
