--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -61,7 +61,7 @@ extends:
                             - "silent-flow"
                             - "b2c-user-flows"
                             # - "on-behalf-of"
-                  - template: .pipelines/templates/e2e-tests.yml@1
+                  - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
                         taretLib: "msal-react"
