--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -64,7 +64,7 @@ extends:
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
-                        taretLib: "msal-react"
+                        targetLib: "msal-react"
                         poolType: "linux"
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
