--- a/samples/msal-angular-v3-samples/angular15-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular15-sample-app/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.0",
-    "e2e-test-utils": "^0.0.1",
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
