--- a/samples/msal-angular-v3-samples/angular17-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular17-standalone-sample/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
-    "e2e-test-utils": "^0.0.1",
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
