Fix source repo for 1p-e2e

--- a/.pipelines/1p-e2e.yml
+++ b/.pipelines/1p-e2e.yml
@@ -6,7 +6,7 @@ variables:
         sourceBranch: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
         sourceBranch: ${{ replace(variables['System.PullRequest.SourceBranch'], 'refs/heads/', '') }}
-    sourceRepo: "msal-javascript-1p"
+    sourceRepo: "microsoft-authentication-library-for-js"
 
 resources:
     repositories:
