--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -18,7 +18,7 @@
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.0.0-rc.1",
+    "@angular/material": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
