--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0-rc.1",
-    "@angular/common": "^18.0.0-rc.1",
-    "@angular/compiler": "^18.0.0-rc.1",
-    "@angular/core": "^18.0.0-rc.1",
-    "@angular/forms": "^18.0.0-rc.1",
-    "@angular/material": "^18.0.0-rc.1",
-    "@angular/platform-browser": "^18.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^18.0.0-rc.1",
-    "@angular/router": "^18.0.0-rc.1",
+    "@angular/animations": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@azure/msal-angular": "^3.0.16",
     "@azure/msal-browser": "^3.13.0",
     "rxjs": "~7.8.0",
@@ -29,9 +29,9 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0-rc.2",
-    "@angular/cli": "^18.0.0-rc.2",
-    "@angular/compiler-cli": "^18.0.0-rc.1",
+    "@angular-devkit/build-angular": "^18.0.1",
+    "@angular/cli": "^18.0.1",
+    "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
     "e2e-test-utils": "file:../../e2eTestUtils",
