--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -3,9 +3,10 @@ variables:
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
     DEBIAN_FRONTEND: noninteractive
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
-        sourceBranchName: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
+        sourceBranch: ${{ replace(variables['Build.SourceBranch'], 'refs/heads/', '') }}
     ${{ if startsWith(variables['System.PullRequest.SourceBranch'], 'refs/pull/') }}:
-        sourceBranchName: ${{ replace(variables['System.PullRequest.SourceBranch'], 'refs/pull/', '') }}
+        sourceBranch: ${{ replace(variables['System.PullRequest.SourceBranch'], 'refs/pull/', '') }}
+    sourceRepo: "microsoft-authentication-library-for-js"
 
 resources:
     repositories:
@@ -28,28 +29,30 @@ extends:
             - stage: e2e_test
               displayName: "3P E2E Tests"
               jobs:
-                  - template: .pipelines/templates/msal-browser-e2e.yml@1P
+                  - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_browser"
+                        targetLib: "msal-browser"
                         poolType: "linux"
-                        publishFlagName: "publishMsalBrowser"
-                        sourceBranchName: ${{ variables.sourceBranchName }}
-                        stage: "PR"
-                        override: true
+                        stage: "CI"
+                        sourceRepo: ${{ variables.sourceRepo }}
+                        sourceBranch: ${{ variables.sourceBranch }}
+                        workspace: "samples/msal-browser-samples"
                         samples:
                             - "client-capabilities"
                             - "onPageLoad"
                             - "pop"
                             - "customizable-e2e-test"
-                  - template: .pipelines/templates/msal-node-e2e.yml@1P
+                  - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_node"
+                        targetLib: "msal-node"
                         poolType: "windows"
-                        publishFlagName: "publishMsalNode"
-                        sourceBranchName: ${{ variables.sourceBranchName }}
-                        stage: "PR"
-                        override: true
-                        node: [16, 18, 20, 22]
+                        stage: "CI"
+                        sourceRepo: ${{ variables.sourceRepo }}
+                        sourceBranch: ${{ variables.sourceBranch }}
+                        workspace: "samples/msal-node-samples"
+                        nodeVersions: [16, 18, 20, 22]
                         samples:
                             - "auth-code"
                             - "auth-code-cli-app"
@@ -58,28 +61,30 @@ extends:
                             - "silent-flow"
                             - "b2c-user-flows"
                             # - "on-behalf-of"
-                  - template: .pipelines/templates/msal-react-e2e.yml@1P
+                  - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
+                        targetLib: "msal-react"
                         poolType: "linux"
-                        publishFlagName: "publishMsalReact"
-                        sourceBranchName: ${{ variables.sourceBranchName }}
-                        stage: "PR"
-                        override: true
+                        stage: "CI"
+                        sourceRepo: ${{ variables.sourceRepo }}
+                        sourceBranch: ${{ variables.sourceBranch }}
+                        workspace: "samples/msal-react-samples"
                         samples:
                             - "nextjs-sample"
                             - "react-router-sample"
                             - "gatsby-sample"
                             - "typescript-sample"
                             - "b2c-sample"
-                  - template: .pipelines/templates/msal-angular-e2e.yml@1P
+                  - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_angular"
+                        targetLib: "msal-angular"
                         poolType: "linux"
-                        publishFlagName: "publishMsalAngular"
-                        sourceBranchName: ${{ variables.sourceBranchName }}
-                        stage: "PR"
-                        override: true
+                        stage: "CI"
+                        sourceRepo: ${{ variables.sourceRepo }}
+                        sourceBranch: ${{ variables.sourceBranch }}
+                        workspace: "samples/msal-angular-v3-samples"
                         samples:
                             - "angular15-sample-app"
                             - "angular16-sample-app"
