--- a/samples/msal-node-samples/b2c-user-flows/package.json
+++ b/samples/msal-node-samples/b2c-user-flows/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "node ./index.js",
-    "test": "jest",
+    "test:e2e": "jest",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
     "start:build": "npm run build:package && npm start",
     "install:local": "npm install ../../../lib/msal-node"
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2"
   },
   "devDependencies": {
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "jest-junit": "^16.0.0"
   }
 }
