--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -16,13 +16,14 @@
     },
     "devDependencies": {
         "react-scripts": "5.0.1",
-        "jest": "^27.0.4"
+        "jest": "^27.0.4",
+        "jest-junit": "^16.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject",
-        "test": "jest",
+        "test:e2e": "jest",
         "build:package": "cd ../../../lib/msal-react & npm run build:all",
         "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
         "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^17 react-dom@^17"
