--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -23,7 +23,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "build:package": "cd ../../../lib/msal-react && npm run build:all",
-        "test": "jest",
+        "test:e2e": "jest",
         "eject": "react-scripts eject",
         "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
         "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^18 react-dom@^18"
@@ -48,6 +48,7 @@
     },
     "devDependencies": {
         "@types/jest": "^26.0.23",
-        "jest": "^27.0.4"
+        "jest": "^27.0.4",
+        "jest-junit": "^16.0.0"
     }
 }
