--- a/samples/msal-angular-v2-samples/angular11-sample-app/package.json
+++ b/samples/msal-angular-v2-samples/angular11-sample-app/package.json
@@ -41,6 +41,7 @@
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^27.0.4",
+    "jest-junit": "^16.0.0",
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
