--- a/samples/msal-angular-v2-samples/angular12-sample-app/package.json
+++ b/samples/msal-angular-v2-samples/angular12-sample-app/package.json
@@ -41,6 +41,7 @@
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^27.0.4",
+    "jest-junit": "^16.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
