--- a/.pipelines/1p-e2e.yml
+++ b/.pipelines/1p-e2e.yml
@@ -1,3 +1,8 @@
+parameters:
+    - name: "debugVariables"
+      displayName: "Debug Variables"
+      type: boolean
+      default: false
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
@@ -43,3 +48,4 @@ extends:
                         samples:
                             - "Broker_WAMTestApp"
                             - "PerformanceTelemetrySample"
+                        debugVariables: ${{ parameters.debugVariables }}
