--- a/.github/workflows/build-test-pr.yml
+++ b/.github/workflows/build-test-pr.yml
@@ -71,11 +71,10 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          # Parse JSON array containing names of all filters matching any of changed files
-          # e.g. ['package1', 'package2'] if both package folders contains changes
-          library: ${{ fromJSON(needs.pre-check.outputs.packages) }}
+          library: [msal-core, msal-common, msal-browser, msal-node, msal-angular, msal-react]
   
     name: ${{ matrix.library }}
+    if: ${{ contains(fromJSON(needs.pre-check.outputs.packages), matrix.library) }}
     
     steps:
     - uses: actions/checkout@v3
